...
			onError();
			showErrorAlertWithEMessage(e);
		}
	};

	return (
		<SafeAreaView testID='notification-preference-view'>
			<StatusBar />
			<List.Container testID='notification-preference-view-list'>
				<List.Section>
					<List.Separator />
					<List.Item
						title='Receive_Notification'
						testID='notification-preference-view-receive-notification'
						right={() => <RenderSwitch preference='disableNotifications' room={room} onChangeValue={saveNotificationSettings} />}
					/>
					<List.Separator />
					<List.Info info={I18n.t('Receive_notifications_from', { name: room.name })} translateInfo={false} />
				</List.Section>

...
				</List.Section>

				<List.Section>
					<List.Separator />
					<List.Item
						title='Mark_as_unread'
						testID='notification-preference-view-mark-as-unread'
						right={() => <RenderSwitch preference='hideUnreadStatus' room={room} onChangeValue={saveNotificationSettings} />}
					/>
					<List.Separator />
					<List.Info info='Mark_as_unread_Info' />
				</List.Section>

...
				<List.Section title='In_App_And_Desktop'>
					<List.Separator />
					<RenderListPicker
						preference='desktopNotifications'
						room={room}
						title='Alert'
						testID='notification-preference-view-alert'
						onChangeValue={saveNotificationSettings}
					/>
					<List.Separator />
					<RenderListPicker
						preference='audioNotificationValue'
						room={room}
						title='Sound'
						testID='notification-preference-view-sound'
						onChangeValue={saveNotificationSettings}
					/>
					<List.Separator />
					<List.Info info='In_App_and_Desktop_Alert_info' />
				</List.Section>
				<List.Section title='Push_Notifications'>
					<List.Separator />
					<RenderListPicker
						preference='mobilePushNotifications'
						room={room}
						title='Alert'
						testID='notification-preference-view-push-notification'
						onChangeValue={saveNotificationSettings}
					/>
					<List.Separator />
					<List.Info info='Push_Notifications_Alert_Info' />
				</List.Section>
				<List.Section title='Email'>
					<List.Separator />
					<RenderListPicker
						preference='emailNotifications'
						room={room}
						title='Alert'
						testID='notification-preference-view-email-alert'
						onChangeValue={saveNotificationSettings}
					/>
					<List.Separator />
				</List.Section>
			</List.Container>
		</SafeAreaView>
...
